--- a/frontend/templates/web/index.html
+++ b/frontend/templates/web/index.html
@@ -16,12 +16,12 @@
 
     <!-- Main Title -->
     <div class="relative mb-6" data-aos="zoom-in" data-aos-duration="1200">
-        <h1 class="text-7xl md:text-9xl font-black tracking-tighter mb-2 leading-none font-sans italic">
+        <h1 class="text-5xl md:text-9xl font-black tracking-tighter mb-2 leading-none font-sans italic">
             <span
                 class="text-transparent bg-clip-text bg-gradient-to-b from-white to-gray-400 filter drop-shadow-[0_0_15px_rgba(255,255,255,0.3)]">IGNITE</span>
         </h1>
         <h2
-            class="text-3xl md:text-5xl font-bold text-accent-blue tracking-[0.5em] uppercase text-glow-blue filter drop-shadow-[0_0_10px_rgba(255,255,0,0.5)]">
+            class="text-xl md:text-5xl font-bold text-accent-blue tracking-[0.5em] uppercase text-glow-blue filter drop-shadow-[0_0_10px_rgba(255,255,0,0.5)]">
             2K26 EDITION
         </h2>
     </div>
