--- a/frontend/templates/web/register.html
+++ b/frontend/templates/web/register.html
@@ -34,11 +34,11 @@
                 </div>
 
                 <div class="space-y-2">
-                    <label class="block text-accent-blue font-semibold ml-1">Category *</label>
+                    <label class="block text-accent-blue font-semibold ml-1">Domain *</label>
                     <div class="relative">
                         <select name="project_category" required
                             class="w-full px-5 py-3 bg-white/5 border border-white/20 rounded-xl text-white focus:outline-none focus:border-accent-pink focus:ring-1 focus:ring-accent-pink appearance-none cursor-pointer transition-all duration-300">
-                            <option value="" disabled selected class="bg-bg-secondary">Select Category</option>
+                            <option value="" disabled selected class="bg-bg-secondary">Select Domain</option>
                             <option value="CIVIL" class="bg-bg-secondary">Civil Engineering</option>
                             <option value="MECH" class="bg-bg-secondary">Mechanical Engineering</option>
                             <option value="CSE" class="bg-bg-secondary">Computer Science and Engineering & Emerging
