--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -832,7 +832,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand animate__animated animate__fadeInLeft" href="{% url 'dashboard' %}">
-                <i class="fas fa-code me-2"></i>CodeStorm Admin
+                <i class="fas fa-code me-2"></i>Ignite 2026 Admin
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
